--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weatherApp",
+  "name": "Highker",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -27,9 +27,14 @@
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/local-notifications": "^5.0.6",
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "chart.js": "^4.4.1",
+    "cordova-plugin-badge": "^0.8.9",
+    "cordova-plugin-badge-fix": "^0.8.10",
+    "cordova-plugin-device": "^2.1.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -45,6 +50,7 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
+    "@capacitor/assets": "^3.0.4",
     "@capacitor/cli": "5.4.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
